--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -4,7 +4,7 @@
     <% @employer.tasks.each_with_index do |task, i| %>
       <div >
         <p class="pad-em margin-0 <%= 'bkg-antique' if i.even? %>"><a href="<%= task_path(task) %>"><%= task.description if task.description %> - <%= task.time_in.strftime("%b. %d") %> |
-          <span class="<%= task.is_completed ? 'task-done' : 'task-undone' %>"><%= task.duration.to_i %> m</span></a></p>
+          <span class="<%= task.is_completed ? 'task-done' : 'task-undone' %>"><%= task.is_completed ? "#{task.duration.to_i} m" : 'Open' %></span></a></p>
       </div>
     <% end %>
   <% else %>
