--- a/app/views/tasks/_form_done.html.erb
+++ b/app/views/tasks/_form_done.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center">
   <%= form_for @task, html: {class: "form-block"} do |f| %>
-    <%= f.text_field :description, placeholder: 'Task' %>
+    <%= f.text_field :description, placeholder: 'Completed Task' %>
     <%= f.label :time_in, 'Clock in', class: 'margin-15' %>
     <span class="margin-15"><%= f.datetime_select :time_in, {}, class: 'radio-text' %></span>
     <%= f.label :time_out, 'Clock out', class: 'margin-15' %>
