Add plus to add tile on index

--- a/app/views/employers/index.html.erb
+++ b/app/views/employers/index.html.erb
@@ -16,8 +16,8 @@
 
   <a href="/employers/new">
     <div class="boss-block">
-      <h3 class="boss-title">Add new</h3>
-      <h4 class='boss-rate'>+</h4>
+      <h3 class="boss-title">+</h3>
+      <h4 class='boss-rate'>Add new</h4>
     </div>
   </a>
 
